--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Avito </title>
 </head>
 <body>
-    <header class="header">
+    <header class="header container">
         <div class="navbar">
                 <a href="index.html" class="logo">
                     <img src="./img/logo.svg" alt="#" class="logo__img">
@@ -57,5 +57,155 @@
             </button>
         </div>
     </header>
+
+    <div class="page_content container">
+        <main class="main">
+            <h2 class="page__title">Рекомендации для вас</h2>
+            <div class="cards">
+                <a href="https://www.avito.ru/ekaterinburg" class="card">
+                    <img src="./img/photo1.jpg" alt="photo" class="card__img">
+                    <div class="card__header">
+                        <h3 class="card__title">Электросамокат</h3>
+                        <button class="like">
+                            <img src="./img/Vector.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card__price">
+                        10 890 Р
+                    </strong>
+                    <p class="card__text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card__text">10 июля 11:39</p>
+                </a>
+                <a href="https://www.avito.ru/ekaterinburg" class="card">
+                    <img src="./img/photo1.jpg" alt="photo" class="card__img">
+                    <div class="card__header">
+                        <h3 class="card__title">Электросамокат</h3>
+                        <button class="like">
+                            <img src="./img/Vector.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card__price">
+                        10 890 Р
+                    </strong>
+                    <p class="card__text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card__text">10 июля 11:39</p>
+                </a>
+                <a href="https://www.avito.ru/ekaterinburg" class="card">
+                    <img src="./img/photo1.jpg" alt="photo" class="card__img">
+                    <div class="card__header">
+                        <h3 class="card__title">Электросамокат</h3>
+                        <button class="like">
+                            <img src="./img/Vector.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card__price">
+                        10 890 Р
+                    </strong>
+                    <p class="card__text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card__text">10 июля 11:39</p>
+                </a>
+                <a href="https://www.avito.ru/ekaterinburg" class="card">
+                    <img src="./img/photo1.jpg" alt="photo" class="card__img">
+                    <div class="card__header">
+                        <h3 class="card__title">Электросамокат</h3>
+                        <button class="like">
+                            <img src="./img/Vector.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card__price">
+                        10 890 Р
+                    </strong>
+                    <p class="card__text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card__text">10 июля 11:39</p>
+                </a>
+                <a href="https://www.avito.ru/ekaterinburg" class="card">
+                    <img src="./img/photo1.jpg" alt="photo" class="card__img">
+                    <div class="card__header">
+                        <h3 class="card__title">Электросамокат</h3>
+                        <button class="like">
+                            <img src="./img/Vector.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card__price">
+                        10 890 Р
+                    </strong>
+                    <p class="card__text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card__text">10 июля 11:39</p>
+                </a>
+                <a href="https://www.avito.ru/ekaterinburg" class="card">
+                    <img src="./img/photo1.jpg" alt="photo" class="card__img">
+                    <div class="card__header">
+                        <h3 class="card__title">Электросамокат</h3>
+                        <button class="like">
+                            <img src="./img/Vector.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card__price">
+                        10 890 Р
+                    </strong>
+                    <p class="card__text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card__text">10 июля 11:39</p>
+                </a>
+                <a href="https://www.avito.ru/ekaterinburg" class="card">
+                    <img src="./img/photo1.jpg" alt="photo" class="card__img">
+                    <div class="card__header">
+                        <h3 class="card__title">Электросамокат</h3>
+                        <button class="like">
+                            <img src="./img/Vector.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card__price">
+                        10 890 Р
+                    </strong>
+                    <p class="card__text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card__text">10 июля 11:39</p>
+                </a>
+                <a href="https://www.avito.ru/ekaterinburg" class="card">
+                    <img src="./img/photo1.jpg" alt="photo" class="card__img">
+                    <div class="card__header">
+                        <h3 class="card__title">Электросамокат</h3>
+                        <button class="like">
+                            <img src="./img/Vector.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card__price">
+                        10 890 Р
+                    </strong>
+                    <p class="card__text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card__text">10 июля 11:39</p>
+                </a>
+            </div>
+        </main>
+        <aside class="sidebar">
+            <h4 class="page__title">Сервисы и услуги</h4>
+            <div class="service">
+                <img src="./img/shipping.svg" alt="shipping" class="service__img">
+                <h5 class="service__title">Доставка</h5>
+                <p class="service__text">Проверка при получении и возможность бесплатно вернуть товар</p>
+            </div>
+            <div class="service">
+                <img src="./img/car.svg" alt="shipping" class="service__img">
+                <h5 class="service__title">Доставка</h5>
+                <p class="service__text">Проверка при получении и возможность бесплатно вернуть товар</p>
+            </div>
+            <div class="service">
+                <img src="./img/booking.svg" alt="shipping" class="service__img">
+                <h5 class="service__title">Доставка</h5>
+                <p class="service__text">Проверка при получении и возможность бесплатно вернуть товар</p>
+            </div>
+
+            <hr color="#E5E5E5">
+            <footer class="footer">
+                <p class="footer__text">© ООО «Аvито», 2011–2021</p>
+                <a class="footer__text" href="#"><p>Политика конфиденциальности</p></a>
+                <a class="footer__text" href="#"><p>Обработка данных</p></a>
+                <ul>
+                    <li class="footer__menu__item"><a class="footer__text__link" href="#">Реклама на сайте</a></li>
+                    <li class="footer__menu__item"><a class="footer__text__link" href="#">Вакансии</a></li>
+                    <li class="footer__menu__item"><a class="footer__text__link" href="#">Помощь</a></li>
+                </ul>
+            </footer>
+        </aside>
+    </div>
 </body>
 </html>
